--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ body {
    font-size: 16px;
    line-height: 1.9;
    letter-spacing: 0.06em;
-   display: inline-block;
+   display:inline-block;
    padding: 10px 32px;
    min-width: 200px;
    min-height: 50px;
@@ -478,12 +478,23 @@ a[href*="https"] {
 }
 .send-btn {
    display: flex;
-   background-color: var(--color-icon);
-   color: #ffffff;
-   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-   border-radius: 4px;
-   padding: 10px;
    align-items: center;
+   margin-left: 12px;
+}
+.icon-send {
+   margin-left: 10px;
+}
+.send-input {
+   width: 358px;
+   height: 50px;
+   background-color: inherit;
+
+   border: 1px solid rgba(255, 255, 255, 0.3);
+   box-sizing: border-box;
+   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+   border-radius: 4px;
+   padding: 15px;
+   color: #ffffff;
 }
 
 /* ------------------ portfolio------------------- */
@@ -658,13 +669,15 @@ a[href*="https"] {
 }
 .modal {
    position: absolute;
+    padding:40px;
+   
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1);
 
    width: 528px;
-   height: 581px;
-   padding: 8px;
+   
+ 
 
    background: #ffffff;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -681,7 +694,7 @@ a[href*="https"] {
    width: 30px;
    height: 30px;
 }
-.modal button {
+.modal >button {
    cursor: pointer;
 
    padding: 0;
@@ -689,4 +702,64 @@ a[href*="https"] {
    border-radius: 50%;
    background: #ffffff;
    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.wraper-form {
+   /* outline: 1px dashed #56ff47; */
+   text-align: center;
+  
+ 
+}
+/* .form-item{
+  
+} */
+.form-backdrop {
+   text-align: center;
+   margin: 0 auto;
+}
+.title-form {
+   font-weight: 700;
+   font-size: 20px;
+   line-height: 1.15;
+   letter-spacing: 0.03em;
+   color: var(--title-color);
+   margin-bottom: 12px;
+}
+.style {
+   width: 100%;
+   
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   box-sizing: border-box;
+   border-radius: 4px;
+}
+.form-list input {
+   padding: 14px;
+}
+.form-item {
+   display: flex;
+
+   flex-direction: column;
+   align-items: flex-start;
+   margin-bottom: 10px;
+   /* background-color: rgb(167, 179, 233); */
+}
+.form-item label {
+   /* background-color: rgb(231, 125, 125); */
+   margin-bottom: 4px;
+   font-size: 12px;
+   line-height: 1.16;
+   letter-spacing: 0.01em;
+}
+.form-item textarea {
+ resize: none;
+   height: 120px;
+   padding: 12px 16px;
+
+}
+.form-checkbox a {
+   text-decoration: underline;
+   color: var(--color-icon);
+}
+.form-checkbox{
+   margin-bottom: 20px;
+   
 }
