--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ body {
    font-size: 16px;
    line-height: 1.9;
    letter-spacing: 0.06em;
-   display:inline-block;
+   display: inline-block;
    padding: 10px 32px;
    min-width: 200px;
    min-height: 50px;
@@ -669,15 +669,13 @@ a[href*="https"] {
 }
 .modal {
    position: absolute;
-    padding:40px;
-   
+   padding: 40px;
+
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1);
 
    width: 528px;
-   
- 
 
    background: #ffffff;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -687,27 +685,30 @@ a[href*="https"] {
 }
 
 .close {
+   display: flex;
    position: absolute;
    top: 8px;
    right: 8px;
+   outline: transparent;
 
    width: 30px;
    height: 30px;
+   align-items: center;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal >button {
+.modal > button {
    cursor: pointer;
-
-   padding: 0;
 
    border-radius: 50%;
    background: #ffffff;
    border: 1px solid rgba(0, 0, 0, 0.1);
 }
+.close:focus-within .icon-close {
+   fill: #2196f3;
+}
 .wraper-form {
    /* outline: 1px dashed #56ff47; */
    text-align: center;
-  
- 
 }
 /* .form-item{
   
@@ -726,22 +727,45 @@ a[href*="https"] {
 }
 .style {
    width: 100%;
-   
+
    border: 1px solid rgba(33, 33, 33, 0.2);
    box-sizing: border-box;
    border-radius: 4px;
 }
 .form-list input {
+   outline: transparent;
    padding: 14px;
+   padding-left: 45px;
+   display: block;
+   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .form-item {
+   border-color: transparent;
    display: flex;
+   position: relative;
 
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 10px;
    /* background-color: rgb(167, 179, 233); */
 }
+.form-item:focus-within .style,
+.form-item:active .style {
+   border-color: var(--color-icon);
+}
+.form-item:focus-within .form-incons {
+   fill: var(--color-icon);
+}
+.form-incons {
+   position: absolute;
+   top: 50%;
+   left: 5%;
+   fill: var(--title-color);
+
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .form-item label {
    /* background-color: rgb(231, 125, 125); */
    margin-bottom: 4px;
@@ -750,25 +774,32 @@ a[href*="https"] {
    letter-spacing: 0.01em;
 }
 .form-item textarea {
- resize: none;
+   resize: none;
    height: 120px;
    padding: 12px 16px;
-
+   outline: transparent;
+   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-checkbox a {
    text-decoration: underline;
    color: var(--color-icon);
 }
-.form-checkbox{
+.form-checkbox {
    margin-bottom: 20px;
-   
 }
-.check-span{
-   width:16px;
-   height :15px;
+.check-label {
+   display: flex;
+   align-items: center;
+}
+.check-span {
+   width: 16px;
+   height: 15px;
    border: 2px solid #212121;
-   margin-right: 8px;
+   margin-right: 7px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.input-check::checked +.form-incons{
- background-color: var(--color-icon);
+
+.input-check:checked + .check-span {
+   background-color: #2196f3;
+   border-color: transparent;
 }
